# metro-build

./: README.md  package-lock.json  package.json
example/: CMakeLists.txt  CMakeLists.txt.template  MetroBuild.json
src/: cmake.ts  defines.ts  generator.ts  glob.ts  module.ts  template.ts  utility.ts
src/defines/: chunks.ts  command.ts  index.ts  program.ts
src/generate/: astnode.ts  builder.ts  index.ts  program.ts  utils.ts
src/generate/chunks/: include-chunk.ts  index.ts  shared-chunk.ts  source-chunk.ts  static-chunk.ts  utils.ts
